default/objects/AccountInformation__c/AccountInformation__c.object-meta.xml
<CustomObject>
    <label>Account Information</label>
    <nameField>
        <displayFormat>AI --{00000}</displayFormat>
        <label>Account Information</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Information</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>