default/objects/AccountInformation__c/fields/AccountExternal__c.field-meta.xml
<CustomField>
    <fullName>AccountExternal__c</fullName>
    <label>Account External</label>
    <length>255</length>
    <type>Text</type>
</CustomField>