default/objects/AccountInformation__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Description</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AC</fullName>
                <label>WORKSHOP</label>
            </value>
            <value>
                <fullName>AG</fullName>
                <label>AGENCY</label>
            </value>
            <value>
                <fullName>AT</fullName>
                <label>WORKSHOP AT</label>
            </value>
            <value>
                <fullName>BU</fullName>
                <label>OFFICE</label>
            </value>
            <value>
                <fullName>CE</fullName>
                <label>CALLCENTER</label>
            </value>
            <value>
                <fullName>DO</fullName>
                <label>HOME</label>
            </value>
            <value>
                <fullName>PC</fullName>
                <label>MOBILE</label>
            </value>
            <value>
                <fullName>PO</fullName>
                <label>MOBILE PO</label>
            </value>
            <value>
                <fullName>SC</fullName>
                <label>RECEPTION</label>
            </value>
            <value>
                <fullName>ST</fullName>
                <label>RECEPTION ST</label>
            </value>
            <value>
                <fullName>JT</fullName>
                <label>LIGNE 24/24</label>
            </value>
            <value>
                <fullName>J7</fullName>
                <label>LIGNE 7J/7</label>
            </value>
            <value>
                <fullName>RE</fullName>
                <label>RETURN</label>
            </value>
            <value>
                <fullName>AE</fullName>
                <label>AIRPORT</label>
            </value>
            <value>
                <fullName>GA</fullName>
                <label>STATION</label>
            </value>
            <value>
                <fullName>CA</fullName>
                <label>OFFICE CA</label>
            </value>
            <value>
                <fullName>AL</fullName>
                <label>ALPHAPAGE</label>
            </value>
            <value>
                <fullName>OP</fullName>
                <label>OPERATOR</label>
            </value>
            <value>
                <fullName>EU</fullName>
                <label>EUROSIGNAL</label>
            </value>
            <value>
                <fullName>HO</fullName>
                <label>HOSPITAL(STANDARD)</label>
            </value>
            <value>
                <fullName>CL</fullName>
                <label>HOSPITAL(STANDARD) CL</label>
            </value>
            <value>
                <fullName>S1</fullName>
                <label>EMERGENCY</label>
            </value>
            <value>
                <fullName>S2</fullName>
                <label>RESUSCITATION</label>
            </value>
            <value>
                <fullName>S3</fullName>
                <label>CARDIOLOGY</label>
            </value>
            <value>
                <fullName>S4</fullName>
                <label>ORTHOPEDIC SURGERY</label>
            </value>
            <value>
                <fullName>S5</fullName>
                <label>VISCERAL SURGERY</label>
            </value>
            <value>
                <fullName>S6</fullName>
                <label>MEDICINE</label>
            </value>
            <value>
                <fullName>S7</fullName>
                <label>PEDIATRICS</label>
            </value>
            <value>
                <fullName>S8</fullName>
                <label>MATERNITY</label>
            </value>
            <value>
                <fullName>S9</fullName>
                <label>NEUROSURGERY</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>